--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "discord.js": "discordjs/discord.js#master"
   }
 }
